try to fix blink bug on ios

--- a/src/index.scss
+++ b/src/index.scss
@@ -78,3 +78,8 @@ ul {
 		opacity: 100;
 	}
 }
+
+.swiper-slide {
+	-webkit-transform: translateZ(0);
+	-webkit-backface-visibility: hidden;
+}
